fix site title on mobile

--- a/styles/typography.less
+++ b/styles/typography.less
@@ -43,11 +43,12 @@ h6 {
 }
 
 h1 {
-  font-size: 120px;
-  font-size: 11vw;
+  font-size: 65px;
+  font-size: 16vw;
   letter-spacing: -0.085em;
 
   @media only screen and (min-width: 1200px) {
+    font-size: 11vw;
   }
 }
 
